# RenderToy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: c-cpp.yml
demo/: CMakeLists.txt
demo/CornellBox/: CMakeLists.txt  cornellbox.mtl  cornellbox_fixed.blend  main.cpp
demo/Cube/: CMakeLists.txt  main.cpp
demo/Drawing/: CMakeLists.txt  main.cpp
demo/Emissive/: CMakeLists.txt  emissive.blend  main.cpp  room.blend  room.blend1  room.mtl
demo/Interactive/: CMakeLists.txt  cornellbox.mtl  main.cpp
demo/Maze/: CMakeLists.txt
demo/ProceduralTexture/: CMakeLists.txt  main.cpp
demo/SmoothShading/: CMakeLists.txt  main.cpp
demo/TestRender/: CMakeLists.txt  main.cpp
demo/WithOIDN/: CMakeLists.txt  main.cpp  monkey.blend  monkey.blend1  monkey.mtl
include/OpenPT/: openpt.h
include/PerlinNoise/: PerlinNoise.hpp
include/RenderToy/: bvh.h  compositor.h  exception.h  importer.h  material.h  object.h  pbr.h  procedural.h  ray.h  renderer.h  rendertoy.h  rtmath.h  surfacepoint.h  world.h
src/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  camera.h  compositor.cpp  compositor.h  exception.cpp  exporter.cpp  exporter.h  geoobj.cpp  geoobj.h  importer.cpp  importer.h  material.cpp  material.h  mathfunc.cpp  mathfunc.h  meshobj.cpp  meshobj.h  object.cpp  object.h  procedural.cpp  procedural.h  random.cpp  random.h  ray.cpp  ray.h  renderer.cpp  renderer.h  rtmath.cpp  rtmath.h  surfacepoint.cpp  surfacepoint.h  texture.cpp  texture.h  world.cpp  world.h
tests/: CMakeLists.txt  exportertests.cpp  geoobjtests.cpp  importertests.cpp  mathfunctests  mathfunctests.cpp
tests/catch_build/generated-includes/catch2/: catch_user_config.hpp
